frontend/src/pages/NRVToken.css
.nrv-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 30px;
}

.nrv-slide {
  padding: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: calc(100% - 60px);
  max-width: 1200px;
  gap: 30px;
}

.icon-n {
  min-width: 20px;
  width: 20px;
  height: auto;
  color: #473a87;
  align-self: center;
}

.nvr-highlight {
  color: #473a87;
}

.nrv-exp {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.nrv-slide-w {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

.nrv-wrap {
  display: grid;
  grid-template-columns: min-content 1fr;
  gap: 10px;
}

.nrv-text {
  grid-row: 2;
  grid-column: 2;
}

.nrv-head {
  align-self: center;
}

.nrv-img {
  width: 100%;
  max-width: 800px;
  height: auto;
}

.nrv-body {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.nvr-card-display {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  width: 100%;
  gap: 30px;
}

.nvr-card {
  display: flex;
  gap: 15px;
}

.nvr-card-text {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.hero-title { 
  transform: translateX(-100%); /* initial position: off-screen to the left */ 
  opacity: 0; /* initial opacity: invisible */ 
  animation: slideInLeft 1s ease-out forwards, /* slide to center in 1s (ease-out, forwards keeps end state) */ 
  fadeIn 2s ease-in forwards; /* fade to full opacity in 2s (ease-in) */ 
} /* Image: start off-screen to the right, then slide left and fade in */ 
  
.hero-image { 
  transform: translateX(100%); /* initial position: off-screen to the right */ 
  opacity: 0; /* initial opacity: invisible */ 
  animation: slideInRight 1s ease-out forwards, /* slide to center in 1s (ease-out, forwards keeps end state) */ 
  fadeIn 2s ease-in forwards; /* fade to full opacity in 2s (ease-in) */ 
} /* Keyframes for sliding and fading animations */ 
  
@keyframes slideInLeft { 
  from { transform: translateX(-100%); } 
  to { transform: translateX(0); } 
} 
  
@keyframes slideInRight { 
  from { transform: translateX(100%); } 
  to { transform: translateX(0); } 
} 
  
@keyframes fadeIn { 
  from { opacity: 0; } 
  to { opacity: 1; } 
}

@media only screen and (max-width : 768px) {
    .nrv-slide-w  {
      grid-template-columns: 1fr;
      padding: 30px;
    }

    .nrv-body {
      padding: 30px;
    }

    .nvr-card-display {
      grid-template-columns: 1fr;
    }
  }

